[build-system]
# 
requires = ["setuptools>=61.0", 
            ]
build-backend = "setuptools.build_meta"
[project]
name = "bicache"
dependencies = ["zarray>=2.18.2",
                "torch>=2.1.2",
                "lmdbm>=0.0.6",
                "psutil>=5.9.8"]
version = "0.0.1"
authors = [
  { name="Jay Rothenberber", email="jay.c.rothenberger@gmail.com" },
]
description = "A bi-level cache for use in machine learning model training and parallel data processing on distributed machines with PyTorch."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Machine Learning",
]

[project.urls]
Homepage = "https://github.com/JayRothenberger/BiLevelCache"
Issues = "https://github.com/JayRothenberger/BiLevelCache/Issues"